feat: added API for users
