# app/swagger/swagger.json
@@ -30,7 +30,7 @@
     "/registerEmp": {
       "post": {
         "tags": [
-          "Register"
+          "Users"
         ],
         "description": "Create new user in system",
         "parameters": [
@@ -61,10 +61,51 @@
           "500": {
             "description": "Internal server error"
           }
+        },
+        "security":[{
+          "JWT" :[]
+        }]
+      }      
+    },
+
+    "/registerUser": {
+      "post": {
+        "tags": [
+          "createEmp"
+        ],
+        "description": "Create new user in system",
+        "parameters": [
+          {
+            "name": "Create",
+            "in": "body",
+            "description": "User that we want to create",
+            "schema": {
+              "$ref": "#/definitions/registerUser"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schema": {
+          "$ref": "#/definitions/register"
+        },
+        "responses": {
+          "200": {
+            "description": "New user is created"
+          },
+          
+          "400": {
+            "description": "Bad Request"
+          },
+          
+          "500": {
+            "description": "Internal server error"
+          }
         }
       }
     },
-    "/empLogin": {
+    "/userLogin": {
       "post": {
         "tags": [
           "login"
@@ -97,12 +138,7 @@
           "500": {
             "description": "Internal server error"
           }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
+        }
       }
     },
     "/readAllData": {
@@ -271,6 +307,27 @@
         "lastName": {
           "type": "string"
         },
+        "department":{
+          "type":"string"
+        },
+        "salary":{
+          "type":"string"
+        },
+        "emailId": {
+          "type": "string"
+        }
+        
+      }
+    },
+    "registerUser": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
         "emailId": {
           "type": "string"
         },
@@ -283,7 +340,7 @@
     "login": {
       "type": "object",
       "properties": {
-        "email" : {
+        "emailId" : {
           "type" :"string"
         },
       "password": {
